--- a/index.html
+++ b/index.html
@@ -3,29 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Munnu Bhai!</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
+    <title>Birthday Wish for Elena</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Happy 20th Birthday, Munnu Bhai! 🎉🎂</h1>
-    <p class="poem-line">On your <span class="highlight-20th">20th</span> 🎈, let’s laugh and cry 😢.</p>
-    <p class="poem-line">From <span class="highlight-teen">teen to twenty</span> 🕰️, you've grown so old 🧓,</p>
-    <p class="poem-line">Time’s passing quickly, so we’ve been told ⏳.</p>
-    <p class="poem-line">Kind, smart, fun-loving, and brave 💪,</p>
-    <p class="poem-line">An <span class="highlight-adventurer">adventurer’s spirit</span> 🌍, the sweetest wave 🌊.</p>
-    <p class="poem-line">You care and nurture, a pure-hearted soul 💖,</p>
-    <p class="poem-line">In a group of mischief, you're our only goal 🏆.</p>
-    <p class="poem-line">While the rest of us are <i>dirty-minded</i> 🤭,</p>
-    <p class="poem-line">Your <span class="highlight-innocence">innocence</span> 😇 keeps us reminded—</p>
-    <p class="poem-line">That <span class="highlight-pure">pure hearts</span> 💫 still exist, a rare breed 🦄,</p>
-    <p class="poem-line">Munnu Bhai, you’re everything we need! 😍</p>
-    <p class="poem-line"><span class="highlight-kazhiveri">Kazhiveri</span> 🏆—the biggest talent, always on top 🔝!</p>
-    <p class="poem-line">So here’s to the years you’ve left behind,</p>
-    <p class="poem-line">And the next adventures you’re sure to find. 🌟</p>
-    <p class="poem-line"><span class="highlight-sibling">Happy Birthday Elena !!!!, our sibling, our star,</span></p>
-    <p class="poem-line">Forever our <span class="highlight-munnu">Munnu Bhai</span>, the best by far! ✨</p>
- 
+    <div class="container">
+        <div class="content">
+            <h1>Happy Birthday, Elena! 🎉</h1>
+            <p class="line" id="line1">Happy Birthday, Elena—our sibling, our star,</p>
+            <p class="line" id="line2">Forever our Munnu Bhai, the best by far!</p>
+            <p class="line" id="line3">On your 20th, you're no longer a teen,</p>
+            <p class="line" id="line4">Now you're older—just look at you, so serene!</p>
+            <p class="line" id="line5">With your innocent smile and pure heart,</p>
+            <p class="line" id="line6">You're a kazhiveri, truly a work of art! 😎</p>
+            <p class="line" id="line7">Adventurer’s spirit, always ready to roam,</p>
+            <p class="line" id="line8">You bring joy to all, making everyone feel at home!</p>
+            <p class="line" id="line9">So let’s raise a toast to our Munnu Bhai,</p>
+            <p class="line" id="line10">To love, laughter, and adventures that never die! 🥂</p>
+            <div class="scroll-prompt" id="scrollPrompt">Scroll for more...</div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
